# cargo_management

./: pyproject.toml
cargo_management/: hooks.py  modules.txt
cargo_management/cargo_management/custom/: customer.json
cargo_management/cargo_management/doctype/account_group/: account_group.js  account_group.json  account_group.py  test_account_group.py
cargo_management/cargo_management/doctype/agent/: agent.js  agent.json  agent.py  agent_dashboard.py  agent_list.js  test_agent.py
cargo_management/cargo_management/doctype/agent_group/: agent_group.js  agent_group.json  agent_group.py  test_agent_group.py
cargo_management/cargo_management/doctype/group_of_account/: group_of_account.json  group_of_account.py
cargo_management/cargo_management/doctype/shipment_settings/: shipment_settings.js  shipment_settings.json  shipment_settings.py  test_shipment_settings.py
cargo_management/cargo_management/report/general/: general.js  general.json  general.py
cargo_management/parcel_management/doctype/parcel/: constants.py  parcel.js  parcel.json  parcel.py  parcel_dashboard.py  parcel_list.js
cargo_management/parcel_management/doctype/parcel_content/: parcel_content.json  parcel_content.py
cargo_management/parcel_management/report/msp/: msp.html  msp.js  msp.json  msp.py
cargo_management/parcel_management/workspace/air_parcels/: air_parcels.json
cargo_management/parcel_management/workspace/parcels/: parcels.json
cargo_management/public/js/: cargo_management.bundle.js  list_view.js
cargo_management/warehouse_management/: utils.py
(+57 files in other folders)
