[project]
name = "cargo_management"
authors = [
    { name = "alaalsalam", email = "alaalsalam101@gmail.com" }
]
description = "ERPNext Cargo Management for Freight Forwarders"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]

dependencies = [
    "easypost==9.2.0"
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"


typing-modules = ["frappe.types.DF"]

[tool.bench.frappe-dependencies]
frappe = ">=15.0.0,<16.0.0"
erpnext = ">=15.0.0,<16.0.0"